# Sprocket-Pan

./: .eslintrc.cjs  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src-tauri/src/commands/: close_splashscreen.rs  mod.rs  save_files.rs  zoom.rs
src/assets/icons/: DotMenu.tsx  SvgIconWrapper.tsx
src/classes/: OrderedKeyValuePairs.ts
src/components/header/: HeaderTabRow.tsx  Tab.tsx  TabHeader.tsx  TabRow.tsx  UndoRedoTabsButton.tsx
src/components/hoc/: WithDebounce.tsx
src/components/panels/: TabContent.tsx
src/components/root/: Root.tsx  RootErrorFallback.tsx  Toasts.tsx  Workspace.tsx
src/components/settings/: GlobalSettingsPanel.tsx  ScriptChips.tsx  (+5 more)
src/constants/: components.tsx  constants.ts  defaults.ts  style.ts  uiElementIds.ts
src/hooks/: useClickOutsideAlerter.ts  useComputedEnvironment.ts  useContextMenu.ts  useDebounce.ts  useEditorTheme.ts  useFileSystemSynchronization.ts  useMonacoSync.ts  useParticleThemeColor.ts  useScrollbarTheme.ts  useShowSync.ts  useSingleAxisScroll.tsx
src/managers/: AuditLogManager.ts  EnvironmentContextResolver.ts  NetworkRequestManager.ts  RustInvoker.ts  SaveUpdateManager.ts  ShortcutManager.ts
src/state/: items.ts  store.ts  types.ts  util.ts
src/utils/: application.ts  conversion.ts  errors.ts  functions.ts  getters.ts  invoke.ts  logging.ts  math.ts  misc.ts  search.ts  serialization.ts  string.ts  style.ts  types.ts  variables.ts
(+230 files in other folders)
