[package]
name = "sprocket_pan"
version = "1.3.1"
description = "SprocketPan"
authors = ["Itai Fish", "KateLynn Pullen"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
	# "devtools", // enable devtools for the console in prod
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-window-state = { version = "2" }
log = "^0.4"
tauri-plugin-log = { version = "2" }
rayon = "1.10.0"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
[target.'cfg(target_os = "linux")'.dependencies]
fork = "0.1"
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
